[project]
name = "imitune-db-manager"
version = "0.1.0"
description = "Dataset processing and embedding extraction for ImiTune"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "onnxruntime-gpu>=1.16.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pinecone>=3.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "huggingface-hub>=0.19.0",
]

[project.scripts]
process-freesound = "process_freesound:main"

[tool.uv]
dev-dependencies = []
